syntax = "proto3";
package pb;

//表示目标文件生成的路径, go的包名就是最后的目录名
//目前统一生成到 app/pb 目录下
option go_package = "github.com/olaola-chat/rbp-functor/app/pb";

import "common.proto";

message AudioPartner {
  UserData user = 1;  // 参与人
  string tag = 2;     // 标签 1:配音 2:文案 3:后期 4:封面设计
}
message AudioData {
  uint64 id = 1;                        // 音频唯一标识
  string title = 2;                     // 音频标题
  string resource = 3;                  // 音频资源
  repeated string covers = 4;           // 音频封面
  uint32 seconds = 5;                   // 音频时长
  string play_stats = 6;                // 音频播放次数
  UserData user_info = 7;               // 发布人
  string desc = 8;                      // 简介
  uint64 create_time = 9;               // 创建时间
  repeated AudioPartner partners = 10;  // 参与人
  repeated string labels = 11;          // 标签
  bool is_collect = 12;      // 是否收藏
  uint32 collect_num = 13;      // 收藏量
}

message AlbumData {
  uint64 id = 1;            // 专辑id
  string title = 2;         // 专辑标题
  string cover = 3;         // 专辑显示封面
  uint32 audio_total = 4;   // 专辑内音频数量
  string play_stats = 5;    // 播放量统计，服务端控制显示规则
  bool is_collect = 6;      // 是否收藏
}

message SubjectData {
  uint64 id = 1;                  // 专题id
  string title = 2;               // 专题名称
  repeated AlbumData albums = 3;  // 专题下专辑列表
  uint32 album_total = 4;
}

message CommentData {
  uint64 id = 1;              // 评论唯一标识
  UserData user_info = 2;     // 评论人信息
  string comment = 3;         // 评论内容
  string address = 4;         // 地址
  string date = 5;            // 日期
}